--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">milo</string>
-    <string name="title_activity_main">milo</string>
+    <string name="app_name">Jugendkompass</string>
+    <string name="title_activity_main">Jugendkompass</string>
     <string name="package_name">de.joinmilo</string>
-    <string name="custom_url_scheme">de.joinmilo</string>
+    <string name="custom_url_scheme">de.codeschluss.jugendkompass</string>
 </resources>
